--- a/authors.tex
+++ b/authors.tex
@@ -20,35 +20,35 @@ An Goris\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosc
 Laura Gaetano\footnote[6,16]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
 Sergiu Groppa\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
 David A. Hafler\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-Hanne F. Harbo\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
-Bernhard Hemmer\footnote[19,20]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
+Hanne F. Harbo\footnote[19]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
+Bernhard Hemmer\footnote[20,21]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
 Kesshi Jordan\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
 Ludwig Kappos\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
 Gina Kirkish\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-Sara Llufriu\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Sara Llufriu\footnote[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
 Stefano Magon\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
 Filippo Martinelli-Boneschi\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-Jacob McCauley\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Jacob McCauley\footnote[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
 Xavier Montalban\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-Mark Muhlau\footnote[19,23]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,TUM–Neuroimaging Center, Technische Universität München, Germany}
+Mark Muhlau\footnote[20,24]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,TUM–Neuroimaging Center, Technische Universität München, Germany}
 Daniel Pelletier\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-Fred Pattany\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-Margaret Pericak-Vance\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Fred Pattany\footnote[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Margaret Pericak-Vance\footnote[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
 Isabelle Rebeix\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
 Maria Rocca\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
 Alex Rovira\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
 Regina Schlaeger\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
-Albert Saiz\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Till Sprenger\footnote[6,24]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
-Alessandro Stecco\footnote[25]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-Bernard M.J. Uitdehaag\footnote[26]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-Pablo Villoslada\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Mike P. Wattjes\footnote[26]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+Albert Saiz\footnote[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Till Sprenger\footnote[6,25]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+Alessandro Stecco\footnote[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+Bernard M.J. Uitdehaag\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+Pablo Villoslada\footnote[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Mike P. Wattjes\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
 Howard Weiner\footnote[7]{Brigham and Women's Hospital, MA, United States}
-Jens Wuerfel\footnote[3,27]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
-Claus Zimmer\footnote[28]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+Jens Wuerfel\footnote[3,28]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
+Claus Zimmer\footnote[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
 Frauke Zipp\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-International Multiple Sclerosis Genetics Consortium\footnote[29]{International Multiple Sclerosis Genetics Consortium}
+International Multiple Sclerosis Genetics Consortium\footnote[30]{International Multiple Sclerosis Genetics Consortium}
 Stephen Hauser\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
 Jorge R. Oksenberg\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
 Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA,Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
@@ -76,35 +76,35 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[6,16]{Laura Gaetano}
 \author[17]{Sergiu Groppa}
 \author[18]{David A. Hafler}
-\author[3]{Hanne F. Harbo}
-\author[19,20]{Bernhard Hemmer}
+\author[19]{Hanne F. Harbo}
+\author[20,21]{Bernhard Hemmer}
 \author[1,2]{Kesshi Jordan}
 \author[6]{Ludwig Kappos}
 \author[11]{Gina Kirkish}
-\author[21]{Sara Llufriu}
+\author[22]{Sara Llufriu}
 \author[6]{Stefano Magon}
 \author[14]{Filippo Martinelli-Boneschi}
-\author[22]{Jacob McCauley}
+\author[23]{Jacob McCauley}
 \author[10]{Xavier Montalban}
-\author[19,23]{Mark Muhlau}
+\author[20,24]{Mark Muhlau}
 \author[18]{Daniel Pelletier}
-\author[22]{Fred Pattany}
-\author[22]{Margaret Pericak-Vance}
+\author[23]{Fred Pattany}
+\author[23]{Margaret Pericak-Vance}
 \author[15]{Isabelle Rebeix}
 \author[14]{Maria Rocca}
 \author[10]{Alex Rovira}
 \author[1,6,8]{Regina Schlaeger}
-\author[21]{Albert Saiz}
-\author[6,24]{Till Sprenger}
-\author[25]{Alessandro Stecco}
-\author[26]{Bernard M.J. Uitdehaag}
-\author[21]{Pablo Villoslada}
-\author[26]{Mike P. Wattjes}
+\author[22]{Albert Saiz}
+\author[6,25]{Till Sprenger}
+\author[26]{Alessandro Stecco}
+\author[27]{Bernard M.J. Uitdehaag}
+\author[22]{Pablo Villoslada}
+\author[27]{Mike P. Wattjes}
 \author[7]{Howard Weiner}
-\author[3,27]{Jens Wuerfel}
-\author[28]{Claus Zimmer}
+\author[3,28]{Jens Wuerfel}
+\author[29]{Claus Zimmer}
 \author[17]{Frauke Zipp}
-\author[29]{International Multiple Sclerosis Genetics Consortium}
+\author[30]{International Multiple Sclerosis Genetics Consortium}
 \author[1]{Stephen Hauser}
 \author[1]{Jorge R. Oksenberg}
 \author[1,2,11]{Roland G. Henry}
@@ -128,16 +128,17 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \affil[16]{Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
 \affil[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
 \affil[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-\affil[19]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[20]{Munich Cluster of Systems Neurology (SyNery)}
-\affil[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\affil[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-\affil[23]{TUM–Neuroimaging Center, Technische Universität München, Germany}
-\affil[24]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
-\affil[25]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-\affil[26]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-\affil[27]{Medical Image Analysis Center Basel, Switzerland}
-\affil[28]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[29]{International Multiple Sclerosis Genetics Consortium}
+\affil[19]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
+\affil[20]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\affil[21]{Munich Cluster of Systems Neurology (SyNery)}
+\affil[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\affil[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\affil[24]{TUM–Neuroimaging Center, Technische Universität München, Germany}
+\affil[25]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+\affil[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+\affil[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+\affil[28]{Medical Image Analysis Center Basel, Switzerland}
+\affil[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\affil[30]{International Multiple Sclerosis Genetics Consortium}
 
 \fi
