--- a/authors.tex
+++ b/authors.tex
@@ -12,43 +12,46 @@ Antje Bischof\footnote[1,6,8]{Department of Neurology, University California, Sa
 Alessandro Carriero\footnote[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
 Manuel Comabella\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
 Jason C. Crane\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-Sandra D’Alfonso\footnote[12]{Eastern Piedmont University, Novara, Italy}
-Benedicte Dubois\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
-Massimo Filippi\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-Bertrand Fontaine\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-An Goris\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
-Laura Gaetano\footnote[6,16]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
-Sergiu Groppa\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-David A. Hafler\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-Hanne F. Harbo\footnote[19]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
-Bernhard Hemmer\footnote[20,21]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
+Sandra D’Alfonso\footnote[12]{Department of Health Sciences, UPO University, Novara, Italy}
+Philippe Demaerel\footnote[13]{Department of Radiology, University Hospitals Leuven, Leuven, Belgium}
+Benedicte Dubois\footnote[14]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+Massimo Filippi\footnote[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+Vinzenz Fleischer\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+Bertrand Fontaine\footnote[17]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+Laura Gaetano\footnote[6,18]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
+An Goris\footnote[14]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+Christiane Graetz\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+Sergiu Groppa\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+David A. Hafler\footnote[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+Hanne F. Harbo\footnote[20]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
+Bernhard Hemmer\footnote[21,22]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
 Kesshi Jordan\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
 Ludwig Kappos\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
 Gina Kirkish\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-Sara Llufriu\footnote[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Sara Llufriu\footnote[23]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
 Stefano Magon\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
-Filippo Martinelli-Boneschi\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-Jacob McCauley\footnote[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Filippo Martinelli-Boneschi\footnote[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+Jacob McCauley\footnote[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
 Xavier Montalban\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-Mark Muhlau\footnote[20,24]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,TUM–Neuroimaging Center, Technische Universität München, Germany}
-Daniel Pelletier\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-Fred Pattany\footnote[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-Margaret Pericak-Vance\footnote[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-Isabelle Rebeix\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-Maria Rocca\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+Mark Muhlau\footnote[21,25]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,TUM–Neuroimaging Center, Technische Universität München, Germany}
+Daniel Pelletier\footnote[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+Pradip M. Pattany\footnote[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Margaret Pericak-Vance\footnote[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Isabelle Rebeix\footnote[17]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+Maria Rocca\footnote[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
 Alex Rovira\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
 Regina Schlaeger\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
-Albert Saiz\footnote[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Till Sprenger\footnote[6,25]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
-Alessandro Stecco\footnote[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-Bernard M.J. Uitdehaag\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-Pablo Villoslada\footnote[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Mike P. Wattjes\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+Albert Saiz\footnote[23]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Till Sprenger\footnote[6,26]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+Alessandro Stecco\footnote[27]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+Bernard M.J. Uitdehaag\footnote[28]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+Pablo Villoslada\footnote[23]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Mike P. Wattjes\footnote[28]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
 Howard Weiner\footnote[7]{Brigham and Women's Hospital, MA, United States}
-Jens Wuerfel\footnote[3,28]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
-Claus Zimmer\footnote[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-Frauke Zipp\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-International Multiple Sclerosis Genetics Consortium\footnote[30]{International Multiple Sclerosis Genetics Consortium}
+Jens Wuerfel\footnote[3,29]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
+Claus Zimmer\footnote[30]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+Frauke Zipp\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+International Multiple Sclerosis Genetics Consortium\footnote[31]{International Multiple Sclerosis Genetics Consortium}
 Stephen Hauser\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
 Jorge R. Oksenberg\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
 Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA,Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
@@ -69,46 +72,48 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[10]{Manuel Comabella}
 \author[11]{Jason C. Crane}
 \author[12]{Sandra D’Alfonso}
-\author[13]{Benedicte Dubois}
-\author[14]{Massimo Filippi}
-\author[15]{Bertrand Fontaine}
-\author[13]{An Goris}
-\author[6,16]{Laura Gaetano}
-\author[17]{Sergiu Groppa}
-\author[18]{David A. Hafler}
-\author[19]{Hanne F. Harbo}
-\author[20,21]{Bernhard Hemmer}
+\author[13]{Philippe Demaerel}
+\author[14]{Benedicte Dubois}
+\author[15]{Massimo Filippi}
+\author[16]{Vinzenz Fleischer}
+\author[17]{Bertrand Fontaine}
+\author[6,18]{Laura Gaetano}
+\author[14]{An Goris}
+\author[16]{Christiane Graetz}
+\author[16]{Sergiu Groppa}
+\author[19]{David A. Hafler}
+\author[20]{Hanne F. Harbo}
+\author[21,22]{Bernhard Hemmer}
 \author[1,2]{Kesshi Jordan}
 \author[6]{Ludwig Kappos}
 \author[11]{Gina Kirkish}
-\author[22]{Sara Llufriu}
+\author[23]{Sara Llufriu}
 \author[6]{Stefano Magon}
-\author[14]{Filippo Martinelli-Boneschi}
-\author[23]{Jacob McCauley}
+\author[15]{Filippo Martinelli-Boneschi}
+\author[24]{Jacob McCauley}
 \author[10]{Xavier Montalban}
-\author[20,24]{Mark Muhlau}
-\author[18]{Daniel Pelletier}
-\author[23]{Fred Pattany}
-\author[23]{Margaret Pericak-Vance}
-\author[15]{Isabelle Rebeix}
-\author[14]{Maria Rocca}
+\author[21,25]{Mark Muhlau}
+\author[19]{Daniel Pelletier}
+\author[24]{Pradip M. Pattany}
+\author[24]{Margaret Pericak-Vance}
+\author[17]{Isabelle Rebeix}
+\author[15]{Maria Rocca}
 \author[10]{Alex Rovira}
 \author[1,6,8]{Regina Schlaeger}
-\author[22]{Albert Saiz}
-\author[6,25]{Till Sprenger}
-\author[26]{Alessandro Stecco}
-\author[27]{Bernard M.J. Uitdehaag}
-\author[22]{Pablo Villoslada}
-\author[27]{Mike P. Wattjes}
+\author[23]{Albert Saiz}
+\author[6,26]{Till Sprenger}
+\author[27]{Alessandro Stecco}
+\author[28]{Bernard M.J. Uitdehaag}
+\author[23]{Pablo Villoslada}
+\author[28]{Mike P. Wattjes}
 \author[7]{Howard Weiner}
-\author[3,28]{Jens Wuerfel}
-\author[29]{Claus Zimmer}
-\author[17]{Frauke Zipp}
-\author[30]{International Multiple Sclerosis Genetics Consortium}
+\author[3,29]{Jens Wuerfel}
+\author[30]{Claus Zimmer}
+\author[16]{Frauke Zipp}
+\author[31]{International Multiple Sclerosis Genetics Consortium}
 \author[1]{Stephen Hauser}
 \author[1]{Jorge R. Oksenberg}
 \author[1,2,11]{Roland G. Henry}
-
 
 \affil[1]{Department of Neurology, University California, San Francisco,  USA}
 \affil[2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
@@ -121,24 +126,25 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \affil[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
 \affil[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
 \affil[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-\affil[12]{Eastern Piedmont University, Novara, Italy}
-\affil[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
-\affil[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-\affil[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-\affil[16]{Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
-\affil[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-\affil[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-\affil[19]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
-\affil[20]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[21]{Munich Cluster of Systems Neurology (SyNery)}
-\affil[22]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\affil[23]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-\affil[24]{TUM–Neuroimaging Center, Technische Universität München, Germany}
-\affil[25]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
-\affil[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-\affil[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-\affil[28]{Medical Image Analysis Center Basel, Switzerland}
-\affil[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[30]{International Multiple Sclerosis Genetics Consortium}
+\affil[12]{Department of Health Sciences, UPO University, Novara, Italy}
+\affil[13]{Department of Radiology, University Hospitals Leuven, Leuven, Belgium}
+\affil[14]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+\affil[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+\affil[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+\affil[17]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+\affil[18]{Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
+\affil[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+\affil[20]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
+\affil[21]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\affil[22]{Munich Cluster of Systems Neurology (SyNery)}
+\affil[23]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\affil[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\affil[25]{TUM–Neuroimaging Center, Technische Universität München, Germany}
+\affil[26]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+\affil[27]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+\affil[28]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+\affil[29]{Medical Image Analysis Center Basel, Switzerland}
+\affil[30]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\affil[31]{International Multiple Sclerosis Genetics Consortium}
 
 \fi
