--- a/subsectionAcquisitio.tex
+++ b/subsectionAcquisitio.tex
@@ -1,2 +1,2 @@
 \subsection{Acquisition}
-T1-weighted images were acquired from 12 subjects (3 Male, 9 Female, ages 24-57) in 20 scanners across Europe and the United States. These scanners varied in make and model, including all three major manufacturers: Siemens, GE, Philips. Two scans were acquired from each subject with repositioning. Previously, Jovicich and colleagues showed that reproducible head positioning along the $z$ axis significantly reduced image intensity variability across sessions \cite{freesurferReliability}. By repositioning in our study, a realistic measure of test-retest variability due to the repositioning consistency of each site's scanning procedure was captured. Tables \ref{tab:acquisition1} and \ref{tab:acquisition2} show the acquisition parameters for all 20 scanners.
+T1-weighted images were acquired from 12 subjects (3 Male, 9 Female, ages 24-57) in 20 scanners across Europe and the United States. These scanners varied in make and model, including all three major manufacturers: Siemens, GE, Philips. Two scans were acquired from each subject with repositioning. Previously, Jovicich and colleagues showed that reproducible head positioning along the $z$ axis significantly reduced image intensity variability across sessions \cite{freesurferReliability}. By repositioning in our study, a realistic measure of test-retest variability due to the repositioning consistency of each site's scanning procedure was captured. Tables \ref{tab:acquisition1} and \ref{tab:acquisition2} show the acquisition parameters for all 20 scanners. Note that the definitions of reptition time (TR), inversion time (TI) and echo time (TE) vary by scanner make. For example, the TR in a Siemens scanner is the time between preparation pulses, while for Philips and GE, the TR is the time between excitation pulses. We decided to report the parameters according to the scanner make definition, rather than trying to make them uniform, because slightly different pulse programming rationales would make a fair comparison difficult.
