--- a/authors.tex
+++ b/authors.tex
@@ -33,7 +33,7 @@ Stefano Magon\footnote[6]{Department of Neurology, Basel University Hospital, Ba
 Filippo Martinelli-Boneschi\footnote[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
 Jacob McCauley\footnote[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
 Xavier Montalban\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-Mark Muhlau\footnote[21,25]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,TUM–Neuroimaging Center, Technische Universität München, Germany}
+Mark Mühlau\footnote[21,25]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany,TUM–Neuroimaging Center, Technische Universität München, Germany}
 Daniel Pelletier\footnote[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
 Pradip M. Pattany\footnote[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
 Margaret Pericak-Vance\footnote[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
