--- a/authors.tex
+++ b/authors.tex
@@ -63,7 +63,7 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[4]{Mona K. Beyer}
 \author[1]{Alyssa H. Zhu}
 \author[1]{Nico Papinutto}
-\author[5]{Russell Shinohara}
+\author[5]{Russell T. Shinohara}
 \author[1]{William Stern}
 \author[6]{Michael Amann}
 \author[7]{Rohit Bakshi}
