--- a/authors.tex
+++ b/authors.tex
@@ -4,7 +4,7 @@ Friedemann Paul\footnote[3]{NeuroCure Clinical Research Center and Clinical and 
 Mona K. Beyer\footnote[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
 Alyssa H. Zhu\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
 Nico Papinutto\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
-Russell Shinohara\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
+Russell T. Shinohara\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
 William Stern\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
 Michael Amann\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
 Rohit Bakshi\footnote[7]{Brigham and Women's Hospital, MA, United States}
