--- a/beginequation_labelm.tex
+++ b/beginequation_labelm.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{meanbeta}
-\hat{\beta_{1,j}} = \overline{Y_{H_j}} - \overline{Y_{L_j}}
+D_{Y,j} = \overline{Y_{H_j}} - \overline{Y_{L_j}}
 \end{equation}
