--- a/beginequation_varhat.tex
+++ b/beginequation_varhat.tex
@@ -1,3 +1,3 @@
 \begin{equation}
-var[\hat{\beta_{1,j}}] = var[\hat{\beta_{10}}a_j] = var[\hat{\beta_{10}}]var[a_j]+var[\hat{\beta_{10}}]E[a_j]^2+var[a_j]E[\hat{\beta_{10}}]^2
+var[D_{Y,j}] = var[D_{U,j}a_j] = var[D_{U,j}]var[a_j]+var[D_{U,j}]E[a_j]^2+var[a_j]E[D_{U,j}]^2
 \end{equation}
