--- a/Finally_the_coeffici.tex
+++ b/Finally_the_coeffici.tex
@@ -1,1 +1,1 @@
-Finally, the coefficients are averaged over $J$ sites to produce the overall estimate,
+Finally, the coefficients are averaged over $J$ sites to produce the overall estimate $\hat{\beta_{10}}=\frac{1}{J} \sum_{j=1}^J D_{Y,j}$,
