--- a/where_the_true_value.tex
+++ b/where_the_true_value.tex
@@ -1,2 +1,2 @@
-where the mean value of each coefficient,
+where  each coefficient,
 $\beta_{k,0}$ for  $k=0,1,2$ is scaled randomly by each site. The major contributors to brain structure region of interest (ROI) boundary variability are contrast differences and gradient distortions, both of which adjust the boundary of the whole ROI rather than add a constant term. To reflect this property, we modeled the systematic error from each MRI sequence as a multiplicative ($Y_{i,j} = a_j*Y_i$) rather than additive ($Y_{ij} = Y_i + a_j$) error term. Similarly, the residual term is also scaled by site, $r_{i,j} \sim N(0,a_j^2\sigma_0^2)$, and the scaling factor, $a_j$, is sampled from a normal distribution with mean $\mu_a$ and variance $\sigma_{a}^2$.
