--- a/The_unconditional_va.tex
+++ b/The_unconditional_va.tex
@@ -1,1 +1,1 @@
-The unconditional variance of the disease effect estimate at site $j$ is:
+The unconditional variance of the disease effect estimate at site $j$ is can be written in terms of the unobserved difference between groups before scaling, $D_{U,j}=D_{Y,j}/a_j$:
