--- a/Given_the_distributi.tex
+++ b/Given_the_distributi.tex
@@ -1,1 +1,1 @@
-The covariance term in the equation above is dropped because we assume that MRI-related biases are independent of the biological effects being studied (i.e. $D_{U,j}$ is independent of $a_j$). Given the distribution of scaling factors and the variance of the true disease effect, $var[D_{U,j}] = 4\sigma_0^2/n$, the equation simplifies to
+The covariance term in the equation above is dropped because we assume that MRI-related biases are independent of the biological effects being studied (i.e. $a_j$ is independent of $D_{U,j}$). Given the distribution of scaling factors and the variance of the true disease effect, $var[D_{U,j}] = 4\sigma_0^2/n$, the equation simplifies to
