--- a/beginequation_labele.tex
+++ b/beginequation_labele.tex
@@ -1,4 +1,4 @@
 \begin{equation}
 \label{eq:lambda}
-\lambda = \frac{E[\hat{\beta_{10}}]^2}{\hat{var}[{\beta_{10}}]} = \frac{J\delta^2}{\frac{4}{n}+CV_{a}^2(\frac{4}{n} + \delta^2)}
+\lambda = \frac{E[\hat{\beta_{10}}]^2}{{var}[\hat{\beta_{10}}]} = \frac{J\delta^2}{\frac{4}{n}+CV_{a}^2(\frac{4}{n} + \delta^2)}
 \end{equation}
