--- a/In_conclusion_system.tex
+++ b/In_conclusion_system.tex
@@ -1,1 +1,1 @@
-In conclusion, systematic error for a set of non-standardized MRI hardware and software of MPRAGE-type sequences can be overcome as the number participating sites increases. This enables collaboration between research institutions and hospitals when hardware and software changes are not feasible. This dataset is available upon request to assist developing more segmentation algorithms that are invariant to systemic errors of different T1-weighted MRI acquisition sequences and hardware.
+In conclusion, systematic error for a set of non-standardized MRI hardware and software of MPRAGE-type sequences can be overcome as the number participating sites increases. For many questions of interest, data from a subset of regions from facilities with modern T1W sequences can be pooled without significant loss of statistical power. This enables collaboration between research institutions and hospitals when hardware and software adaptation are not feasible. We provide a comprehensive framework for assessing and making informed quantitative decisions for MRI facility inclusion, pipeline and metric optimization, and study power.
