--- a/with_matched_covaria.tex
+++ b/with_matched_covaria.tex
@@ -1,1 +1,1 @@
-with covariates, $Z_{i,j}$, residuals, $r_{i,j}$, and contrast vector, $X_{i,j}$, with values $X_{high}, X_{low} = 0.5,-0.5$. For this derivation we assume an equal number of subjects observed at each site in the high and low groups with balanced covariates. The site mean, disease effect, and covariate effect randomly vary between sites so the intercept and slope coefficients become dependent variables \cite{Raudenbush2000} and we assume:
+ The site mean, disease effect, and covariate effect randomly vary between sites so the intercept and slope coefficients become dependent variables \cite{Raudenbush2000} and we assume:
