--- a/We_defined_a_randome.tex
+++ b/We_defined_a_randome.tex
@@ -1,1 +1,1 @@
-We defined a site-level model using the notation of \cite{Raudenbush2000}, to express the relationship between a brain metric $Y_{i,j}$ and high or low disease group $X_{i,j}$ for subject $i=1,\ldots,n$ at site $j$  as %Jorge: is it appropriate to talk about high/low groups with healthy volunteers?
+We defined a site-level model using the notation of \cite{Raudenbush2000}, to express the relationship between a brain metric that is scaled by $a_j$ as $Y_{i,j} = a_j*U_{ij}$ and high or low disease group $X_{i,j}$ for subject $i=1,\ldots,n$ at site $j$  as 
