--- a/beginmultline_fracpa.tex
+++ b/beginmultline_fracpa.tex
@@ -1,5 +1,5 @@
 \begin{multline}
 \frac{\partial}{\partial \mu}\Big(log(L_1)\Big) =
-\frac{\partial}{\partial \mu} \Big(\sum\limits_j^J \frac{1}{\sqrt{2 \pi a_j^2 V_j}} + \sum\limits_j^J \frac{(\beta_{1j} - \mu)^2}{2 a_j^2V_j}\Big) = 0
+\frac{\partial}{\partial \mu} \Big(\sum\limits_j^J log(\frac{1}{\sqrt{2 \pi a_j^2 V_j}}) + \sum\limits_j^J \frac{(\beta_{1j} - \mu)^2}{2 a_j^2V_j}\Big) = 0
 \implies \hat{\mu} = \frac{\sum\limits_j^J a_j^{-2}V_j^{-1}\beta_{1j}}{\sum\limits_j^J a_j^{-2}V_j^{-1}}
 \end{multline}
