--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -525,3 +525,10 @@
   year={2012},
   publisher={BioMed Central Ltd}
 }
+
+@article{boes1974introduction,
+  title={Introduction to the Theory of Statistics},
+  author={Boes, Duane C and Graybill, FA and Mood, AM},
+  journal={Series in probabili},
+  year={1974}
+}
