added citation for reviewer 1 major 1 's suggestion

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -532,3 +532,14 @@
   journal={Series in probabili},
   year={1974}
 }
+
+@article{tardif2010regional,
+  title={Regional impact of field strength on voxel-based morphometry results},
+  author={Tardif, Christine L and Collins, D Louis and Pike, G Bruce},
+  journal={Human brain mapping},
+  volume={31},
+  number={7},
+  pages={943--957},
+  year={2010},
+  publisher={Wiley Online Library}
+}
