--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -543,3 +543,14 @@
   year={2010},
   publisher={Wiley Online Library}
 }
+
+@article{tardif2009sensitivity,
+  title={Sensitivity of voxel-based morphometry analysis to choice of imaging protocol at 3 T},
+  author={Tardif, Christine L and Collins, D Louis and Pike, G Bruce},
+  journal={Neuroimage},
+  volume={44},
+  number={3},
+  pages={827--838},
+  year={2009},
+  publisher={Elsevier}
+}
