--- a/We_hypothesized_that.tex
+++ b/We_hypothesized_that.tex
@@ -1,1 +1,1 @@
-We hypothesized that all differences in regional contrast and geometric distortion result in regional volumes that are consistently and linearly scaled from their true value. For a given region of interest (ROI), two mechanisms impact the final boundary definition: gradient nonlinearities cause distortion and, simultaneously, hardware, including scanner and coils and field strength, and acquisition parameters modulate tissue contrast, adjusting the whole boundary. Previously, Tardiff and colleagues have found that contrast-to-noise ratio and contrast inhomogeneity from various pulse sequences and scanner strengths cause regional biases in VBM\cite{tardif2010regional, tardif2009sensitivity}, and therefore we hypothesized that each ROI will scale differently at each site. By imaging 12 subjects in 20 different scanners using varying acquisition schemes, we were able to estimate the scaling factor for each regional volume at each site. We also defined a framework for calculating the power of a multisite study as a function of the scaling factor variability between sites. This enables us to power a cross-sectional study, and to outline the conditions under which calibration is necessary. This framework can also indicate which regional volumes are sufficiently reliable to investigate using a multisite approach.
+We hypothesized that all differences in regional contrast and geometric distortion result in regional volumes that are consistently and linearly scaled from their true value. For a given region of interest (ROI), two mechanisms impact the final boundary definition: gradient nonlinearities cause distortion and, simultaneously, hardware  (including scanner, field strength, and coils) and acquisition parameters modulate tissue contrast, adjusting the whole boundary. Previously, Tardiff and colleagues have found that contrast-to-noise ratio and contrast inhomogeneity from various pulse sequences and scanner strengths cause regional biases in VBM\cite{tardif2010regional, tardif2009sensitivity}, and therefore we hypothesized that each ROI will scale differently at each site. By imaging 12 subjects in 20 different scanners using varying acquisition schemes, we were able to estimate the scaling factor for each regional volume at each site. We also defined a framework for calculating the power of a multisite study as a function of the scaling factor variability between sites. This enables us to power a cross-sectional study, and to outline the conditions under which calibration is necessary. This framework can also indicate which regional volumes are sufficiently reliable to investigate using a multisite approach.
